[gd_scene load_steps=16 format=2]

[ext_resource path="res://PlacehoolderSprites/BG1.png" type="Texture" id=1]
[ext_resource path="res://Fonts/DynamicFonts/ClothesEnglish.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/ProductSans-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://ObjectScenes/QuizAOption.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/Buttons/Submit.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Buttons/SubmitHover.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Buttons/Next.png" type="Texture" id=7]
[ext_resource path="res://PlacehoolderSprites/Answer_Correct.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Buttons/NextHover.png" type="Texture" id=9]
[ext_resource path="res://ObjectScenes/BackButton.tscn" type="PackedScene" id=10]
[ext_resource path="res://DisplayScenes/QuizA.gd" type="Script" id=11]
[ext_resource path="res://ObjectScenes/InOverlay.tscn" type="PackedScene" id=12]
[ext_resource path="res://ObjectScenes/QuizHelpPopup.tscn" type="PackedScene" id=13]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 5
outline_color = Color( 0.709804, 0.254902, 0.254902, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 1
outline_color = Color( 0.168627, 0.282353, 0.501961, 1 )
font_data = ExtResource( 3 )

[node name="QuizA" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -538.0
margin_top = -346.0
margin_right = 538.0
margin_bottom = 346.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Question" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 1076.0
margin_bottom = 100.0
rect_min_size = Vector2( 1076, 100 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Which one is A [color=yellow]Blouse[/color]?[/center]"
text = "Which one is A Blouse?"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 1076.0
margin_bottom = 344.0
rect_min_size = Vector2( 0, 240 )
alignment = 1

[node name="Option1" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 204.0
margin_top = 0.0
margin_right = 424.0
margin_bottom = 240.0

[node name="Option2" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 428.0
margin_top = 0.0
margin_right = 648.0
margin_bottom = 240.0
uid = 1

[node name="Option3" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 652.0
margin_top = 0.0
margin_right = 872.0
margin_bottom = 240.0
uid = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 348.0
margin_right = 1076.0
margin_bottom = 588.0
rect_min_size = Vector2( 0, 240 )
alignment = 1

[node name="Option1" parent="VBoxContainer/HBoxContainer2" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 204.0
margin_top = 0.0
margin_right = 424.0
margin_bottom = 240.0
uid = 3

[node name="Option2" parent="VBoxContainer/HBoxContainer2" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 428.0
margin_top = 0.0
margin_right = 648.0
margin_bottom = 240.0
uid = 4

[node name="Option3" parent="VBoxContainer/HBoxContainer2" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 652.0
margin_top = 0.0
margin_right = 872.0
margin_bottom = 240.0
uid = 5

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 592.0
margin_right = 1076.0
margin_bottom = 692.0
rect_min_size = Vector2( 0, 100 )
alignment = 1

[node name="ResultIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer3"]
margin_left = 146.0
margin_right = 266.0
margin_bottom = 100.0
rect_min_size = Vector2( 120, 80 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Result" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_left = 270.0
margin_top = 10.0
margin_right = 929.0
margin_bottom = 90.0
rect_min_size = Vector2( 0, 80 )
custom_fonts/font = SubResource( 1 )
text = "You are correct! It is a Blouse!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -312.0
margin_top = -54.0
margin_right = -52.0
margin_bottom = 54.0
alignment = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Submit" type="TextureButton" parent="HBoxContainer"]
margin_left = 51.0
margin_right = 260.0
margin_bottom = 108.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="Next" type="TextureButton" parent="HBoxContainer"]
visible = false
margin_left = 132.0
margin_right = 260.0
margin_bottom = 64.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 9 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -178.5
margin_right = 292.0
margin_bottom = 178.5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CorrectAnswerCount" type="Label" parent="VBoxContainer2"]
margin_top = 60.0
margin_right = 292.0
margin_bottom = 297.0
custom_fonts/font = SubResource( 2 )
text = "Correct
Answers:
10
Questions
Answered:
10"
align = 1
valign = 1

[node name="BackButton" parent="." instance=ExtResource( 10 )]
targetScene = "QuizMenu"

[node name="HelpPopup" parent="." instance=ExtResource( 13 )]
visible = false

[node name="Overlay" parent="." instance=ExtResource( 12 )]
visible = false

[connection signal="button_down" from="HBoxContainer/Submit" to="." method="_on_Submit_button_down"]
[connection signal="button_down" from="HBoxContainer/Next" to="." method="_on_Next_button_down"]
